# ocp-addons-operators-cli

./: .flake8  Dockerfile  OWNERS  README.md  pyproject.toml  pytest.ini  renovate.json  tox.ini
app/addon_cmds/: commands.py
ocp_addons_operators_cli/: cli.py  constants.py
ocp_addons_operators_cli/addon_cmds/: commands.py
ocp_addons_operators_cli/manifests/: addons-operators.yaml.example
ocp_addons_operators_cli/operator_cmds/: commands.py
ocp_addons_operators_cli/scripts/: ocp-addons-operators-cli-build-command.py
ocp_addons_operators_cli/tests/: test_operators.py
ocp_addons_operators_cli/utils/: addons_utils.py  cli_utils.py  general.py  operators_utils.py
