[tool.coverage.run]
omit = ["ocp_addons_operators_cli/tests/*", "ocp_addons_operators_cli/cli.py"]

[tool.coverage.report]
fail_under = 20 # TODO: Need to be at least 60
skip_empty = true

[tool.coverage.html]
directory = ".tests_coverage"

[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[tool.poetry]
name = "ocp-addons-operators-cli"
version = "0.0.0"
description = "CLI to install/uninstall Addons/operators on Openshift clusters."
authors = [
  "Meni Yakove <myakove@gmail.com>",
  "Ruth Netser <ruth.netser@gmail.com>",
]
packages = [{ include = "ocp_addons_operators_cli" }]
include = [{ path = "manifests/*" }]
readme = "README.md"
repository = "https://github.com/RedHatQE/ocp-addons-operators-cli"

[tool.poetry.scripts]
cli = "app.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
openshift-cluster-management-python-wrapper = "^1.0.21"
colorlog = "^6.7.0"
openshift-python-wrapper = "^10.0.0"
openshift-python-utilities = "^5.0.0"
click = "^8.1.4"
pyaml-env = "^1.2.1"
python-simple-logger = "^1.0.7"

[tool.poetry.group.dev.dependencies]
ipython = "*"
ipdb = "*"


[tool.poetry.group.tests.dependencies]
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"

[tool.poetry-dynamic-versioning]
enable = true
pattern = "((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"

[tool.poetry-dynamic-versioning.substitution]
files = ["VERSION"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
